# Quilix-BACKUP-COPY-

./: CHANGELOG.md  README.md  pyproject.toml  requirements.txt  setup.cfg  update_version.py
Quilix/: LICENSE  README.md  requirements.txt
Quilix/core/: util.py
Quilix/core/cache/: quilix_notes.json  quilix_session.json
Quilix/core/home/: main.html
Quilix/core/home/css/: main.css
Quilix/core/icons/: quilix_history.json
Quilix/core/styles/: light_mode.css
core/: browser_tab.py  main.py  modern_browser.py  util.py
core/cache/: quilix_history.json
core/config/: config.py
core/home/: main.html
core/icons/: quilix_notes.json  quilix_session.json
core/model/: setting_model.py
core/styles/: dark_mode.css
